--- a/views/secrets.ejs
+++ b/views/secrets.ejs
@@ -9,7 +9,11 @@ Date: 09/09/2021 -->
   <div class="container">
     <i class="fas fa-key fa-6x"></i>
     <h1 class="display-3">You've Discovered My Secret!</h1>
-    <p class="secret-text">I wish to retire at 35.</p>
+
+    <% usersWithSecrets.forEach(function(user){ %>
+      <p class="secret-text"><%=user.secret%></p>
+   <% })%>
+    
     <hr>
     
     <a class="btn btn-light btn-lg" href="/logout" role="button">Log Out</a>
