--- a/views/login.ejs
+++ b/views/login.ejs
@@ -30,16 +30,16 @@ Date: 09/09/2021 -->
       </div>
     </div>
 
-    <!-- <div class="col-sm-4">
+    <div class="col-sm-4">
       <div class="card">
         <div class="card-body">
-          <a class="btn btn-block" href="/auth/google" role="button">
+          <a class="btn btn-block btn-social btn-google" href="/auth/google" role="button">
             <i class="fab fa-google"></i>
             Sign In with Google
           </a>
         </div>
       </div>
-    </div> -->
+    </div>
 
   </div>
 </div>
